Added Batching operations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,15 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Spring Data JPA and Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=DEBUG
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-# Logging Pattern
-#logging.pattern.console=%d{HH:mm:ss} %-5level [APP] >>> %logger{36} - %msg%n
+
+#nsert 1,000 records in one batch
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+#Group similar INSERT operations together
+spring.jpa.properties.hibernate.order_inserts=true
+#Group similar UPDATE operations together
+spring.jpa.properties.hibernate.order_updates=true
+
