--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=user-service
+spring.mvc.async.request-timeout=0
 
 # MySQL database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/learn_CRUD
