--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.generate_statistics=true
-logging.level.org.hibernate.stat=DEBUG
+#logging.level.org.hibernate.stat=DEBUG
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #nsert 1,000 records in one batch
