--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Spring Data JPA and Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.generate_statistics=true
 #logging.level.org.hibernate.stat=DEBUG
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #nsert 1,000 records in one batch
 spring.jpa.properties.hibernate.jdbc.batch_size=1000
