Async implemented, necessary changes made, needs further improvements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,44 @@
+# Application name used for logging, monitoring, and identification
 spring.application.name=user-service
+
+# Disable async request timeout (important for long-running async jobs)
 spring.mvc.async.request-timeout=0
 
-# MySQL database connection settings
+# ------------------ DATABASE CONFIG ------------------
+
+# JDBC URL for connecting to MySQL database
 spring.datasource.url=jdbc:mysql://localhost:3306/learn_CRUD
+
+# Database username
 spring.datasource.username=root
+
+# Database password
 spring.datasource.password=pass123
+
+# MySQL JDBC driver class
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Spring Data JPA and Hibernate settings
+# ------------------ JPA / HIBERNATE ------------------
+
+# Automatically update DB schema based on JPA entities (dev-friendly)
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.generate_statistics=true
-#logging.level.org.hibernate.stat=DEBUG
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-#nsert 1,000 records in one batch
+# Log generated SQL queries (useful for debugging, disable in prod)
+spring.jpa.show-sql=false
+
+# Enables detailed Hibernate performance statistics (disabled by default)
+spring.jpa.properties.hibernate.generate_statistics=true
+
+# Log Hibernate internal statistics (disabled to avoid noise)
+logging.level.org.hibernate.stat=info
+
+# ------------------ BATCH INSERT OPTIMIZATION ------------------
+
+# Number of records Hibernate inserts in a single batch
 spring.jpa.properties.hibernate.jdbc.batch_size=1000
-#Group similar INSERT operations together
-spring.jpa.properties.hibernate.order_inserts=true
-#Group similar UPDATE operations together
-spring.jpa.properties.hibernate.order_updates=true
 
+# Group similar INSERT statements to improve batch efficiency
+spring.jpa.properties.hibernate.order_inserts=true
+
+# Group similar UPDATE statements to improve batch efficiency
+spring.jpa.properties.hibernate.order_updates=true
