Refined JobInfo Timestamp to human readable & added Hikari CP config in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,10 +27,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 # Enables detailed Hibernate performance statistics (disabled by default)
-spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.generate_statistics=false
 
 # Log Hibernate internal statistics (disabled to avoid noise)
-logging.level.org.hibernate.stat=info
+logging.level.org.hibernate.stat=off
 
 # ------------------ BATCH INSERT OPTIMIZATION ------------------
 
@@ -42,3 +42,22 @@ spring.jpa.properties.hibernate.order_inserts=true
 
 # Group similar UPDATE statements to improve batch efficiency
 spring.jpa.properties.hibernate.order_updates=true
+
+# ------------------ HIKARI CONNECTION POOL ------------------
+
+# Maximum number of DB connections in the pool
+spring.datasource.hikari.maximum-pool-size=10
+
+# Minimum idle connections kept ready
+spring.datasource.hikari.minimum-idle=5
+
+# Max time a connection can sit idle before being removed (ms)
+spring.datasource.hikari.idle-timeout=300000
+
+# Max lifetime of a connection in the pool (ms)
+spring.datasource.hikari.max-lifetime=1800000
+
+# Max time to wait for a connection from pool (ms)
+spring.datasource.hikari.connection-timeout=30000
+
+logging.level.com.zaxxer.hikari=WARN
